[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
name = "physics_ball"
version = "0.1.0"
description = ""
authors = ["PhilippeDucTai LÊ <le.philippe.duc.tai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[project.scripts]
run_simulation = "physics_ball:main"